src/components/CommunityNavigation/styles.scss
@import '../../styles/theme';
.community-navigation {
    border-right: 1px solid $color-borders-main;
    width: 245px;
    .community-navigation-header {
        height: 55px;
        padding: 20px 15px;
        border-bottom: 1px solid $color-borders-main;
        h4 {
            // margin-top: -5px;
            // margin-left: 20px;
            color: $typography-2;
            font-size: 14px;
        }
        span {
            position: relative;
            top: -2px;
            left: 20px;
            font-size: 10px;
            font-weight: bold;
        }
    }
    .community-navigation-channel-list {
        display: flex;
        flex-direction: column;
        margin-top: 5px;
        margin-left: 7px;
        align-content: center;
        .channel-category {
            display: flex;
            flex-direction: column;
            .channel-category-name {
                font-weight: 500;
                text-transform: uppercase;
                color: $typography-2;
                padding: 5px 10px;
                font-size: 14px;
                span {
                    margin-right: 5px;
                }
            }
        }
        .channel-btn {
            background-color: transparent;
            border-color: transparent;
            padding: 3px 10px 4px 10px;
            border-radius: 5px;
            padding: 5px;
            color: $typography-2;
            font-weight: 400;
            font-size: 14px;
            width: 230px;
            text-align: left;
            span {
                position: relative;
                top: 1px;
                padding: 5px 2px;
            }
            &:hover {
                background-color: #38304F;
                color: #cfd6db;
            }
        }
        .active {
            color: $palace-gold;
            background-color: #38304F;
        }
    }
    // .community-navigation-chlist {
    //     display: flex;
    //     flex-direction: column;

    //     margin-top: 5px;
    //     ul {
    //         list-style-type: none;
    //         li {
    //             margin-top: 2px;
    //             margin-left: -32px;
    //             width: 230px;
    //             padding: 9px 15px;
    //             border-radius: 5px;
    //             span {
    //                 padding: 5px;
    //             }
    //             a {
    //                 color: $typography-2;
    //                 font-weight: 400;
    //                 font-size: 15px;
    //                 &:hover {
    //                     text-decoration: none;
    //                     text-shadow: none;
    //                 }
    //             }
    //             &:hover {
    //                 background-color: #38304F;
    //             }
    //         }
    //     }
    // }
}

